aplly images interation
i've pug a conection image betwenn json doc, html doc and js doc. With this code i just need to change the property of the image key inside each item or family in productList.json.
i also create files for each family of products inside image file.

--- a/html/ervasECha.html
+++ b/html/ervasECha.html
@@ -82,7 +82,9 @@
     </section>
 
     <!-- watch js document -->
-    <section class="ervas"></section>
+    <section class="ervas">
+        <h4 class="section-title">Ervas e Chá</h4>
+    </section>
 
     <section class="media-and-contacts" id="contactsAndSocialMedia">
 
