--- a/html/floresComestiveis.html
+++ b/html/floresComestiveis.html
@@ -82,7 +82,9 @@
     </section>
 
     <!-- watch js document -->
-    <section class="floresComestiveis"></section>
+    <section class="floresComestiveis">
+        <h4 class="section-title">Flores Comestíveis</h4>
+    </section>
 
     <section class="media-and-contacts" id="contactsAndSocialMedia">
 
