--- a/html/horticulas.html
+++ b/html/horticulas.html
@@ -82,7 +82,9 @@
     </section>
 
     <!-- watch js document -->
-    <section class="horticulas"></section>
+    <section class="horticulas">
+        <h4 class="section-title">Horticulas</h4>
+    </section>
 
     <section class="media-and-contacts" id="contactsAndSocialMedia">
 
