--- a/html/leguminosas.html
+++ b/html/leguminosas.html
@@ -82,7 +82,9 @@
     </section>
 
     <!-- watch js document -->
-    <section class="leguminosas"></section>
+    <section class="leguminosas">
+        <h4 class="section-title">Leguminosas</h4>
+    </section>
 
     <section class="media-and-contacts" id="contactsAndSocialMedia">
 
