--- a/html/microverdes.html
+++ b/html/microverdes.html
@@ -82,7 +82,9 @@
     </section>
 
     <!-- watch js document -->
-    <section class="microverdes"></section>
+    <section class="microverdes">
+        <h4 class="section-title">Microverdes</h4>
+    </section>
 
     <section class="media-and-contacts" id="contactsAndSocialMedia">
 
