--- a/html/plantasEmVaso.html
+++ b/html/plantasEmVaso.html
@@ -81,7 +81,9 @@
     </section>
 
     <!-- watch js document -->
-    <section class="plantasEmVaso toto"></section>
+    <section class="plantasEmVaso toto">
+        <h4 class="section-title">plantas em vaso</h4>
+    </section>
 
     <section class="media-and-contacts" id="contactsAndSocialMedia">
 
