--- a/html/raizes.html
+++ b/html/raizes.html
@@ -81,7 +81,9 @@
     </section>
 
     <!-- watch js document -->
-    <section class="raizes"></section>
+    <section class="raizes">
+        <h4 class="section-title">Raízes</h4>
+    </section>
 
     <section class="media-and-contacts" id="contactsAndSocialMedia">
 
