--- a/html/sabaoNatural.html
+++ b/html/sabaoNatural.html
@@ -83,7 +83,9 @@
     </section>
 
     <!-- watch js document -->
-    <section class="sabaoNatural"></section>
+    <section class="sabaoNatural">
+        <h4 class="section-title">sabão natural</h4>
+    </section>
 
     <section class="media-and-contacts" id="contactsAndSocialMedia">
 
