--- a/html/verduras.html
+++ b/html/verduras.html
@@ -83,7 +83,9 @@
     </section>
 
     <!-- watch js document -->
-    <section class="verduras"></section>
+    <section class="verduras">
+        <h4 class="section-title">verduras</h4>
+    </section>
 
     <section class="media-and-contacts" id="contactsAndSocialMedia">
 
