--- a/index.html
+++ b/index.html
@@ -100,21 +100,24 @@
                         <div class="cabazOne"></div>
                     </a>
                 </div>
+
                 <div class="cabaz-2 photo-div-cabaz">
                     <a href="/html/cabaz-dois.html">
-                        <img src="images/cabaz-photo.jpeg" alt="">
+                        <img src="images/fotosCabazes/cabaz-dois/c2.jpg" alt="">
                         <div class="cabazTwo"></div>
                     </a>
                 </div>
+
                 <div class="cabaz-3 photo-div-cabaz">
                     <a href="/html/cabaz-tres.html">
-                        <img src="images/cabaz-photo.jpeg" alt="">
+                        <img src="images/fotosCabazes/cabaz-tres/c3.jpg" alt="">
                         <div class="cabazThree"></div>
                     </a>
                 </div>
+
                 <div class="cabaz-4 photo-div-cabaz">
                     <a href="/html/produtos.html">
-                        <img src="images/cabaz-photo.jpeg" alt="">
+                        <img src="images/fotosCabazes/criar-cabaz/cb.jpg" alt="">
                         <div class="cabazFour"></div>
                     </a>
                 </div>
@@ -124,7 +127,7 @@
         </section>
 
         <!-- TESTIMONIAL -->
-        <h3 class="section-title">Testemunhos:</h3>
+        <h3 class="section-title-testimonial">Testemunhos:</h3>
         <section class="testimonials"></section>
 
 
