--- a/html/informations.html
+++ b/html/informations.html
@@ -14,6 +14,9 @@
     <link rel="stylesheet" href="/stylesheet/footer.css">
     <link rel="stylesheet" href="/stylesheet/ervasECha.css">
     <link rel="stylesheet" href="/stylesheet/navAndSearch.css">
+    <link rel="stylesheet" href="/stylesheet/informations.css">
+
+
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/> -->
     <script src="/scriptDocs/horticulas.js" defer></script>
     <script src="https://kit.fontawesome.com/ff1abd11bd.js" crossorigin="anonymous"></script> 
@@ -80,6 +83,22 @@
         <div class="criar-cabaz"><i class="fa-solid fa-basket-shopping"></i></div>
         <div class="login"><i class="fa-solid fa-user"></i></div>
     </section>
+<!-- ================================================================ -->
+    <section class="testImage">
+        <img src="/images/img-Test.jpg" alt="">
+        <img src="/images/img-Test.jpg" alt="">
+        <img src="/images/img-Test.jpg" alt="">
+        <img src="/images/img-Test.jpg" alt="">
+        <img src="/images/img-Test.jpg" alt="">
+        <img src="/images/img-Test.jpg" alt="">
+
+        <img src="/images/img-Test.jpg" alt="">
+        <img src="/images/img-Test.jpg" alt="">
+        <img src="/images/img-Test.jpg" alt="">
+
+
+    </section>
+<!-- ======================================================================= -->
 
     <section class="media-and-contacts" id="contactsAndSocialMedia">
 
