--- a/html/ovos.html
+++ b/html/ovos.html
@@ -82,7 +82,9 @@
     </section>
 
     <!-- watch js document -->
-    <section class="ovos"></section>
+    <section class="ovos">
+        <h4 class="section-title">Ovos</h4>
+    </section>
 
     <section class="media-and-contacts" id="contactsAndSocialMedia">
 
