--- a/html/saladas.html
+++ b/html/saladas.html
@@ -82,7 +82,9 @@
     </section>
 
     <!-- watch js document -->
-    <section class="saladas"></section>
+    <section class="saladas">
+        <h4 class="section-title">saladas</h4>
+    </section>
 
     <section class="media-and-contacts" id="contactsAndSocialMedia">
 
