--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
                 <div class="cart-div">
                     <a href="/html/carrinho.html">
-                        <i class="fa-solid fa-cart-shopping"></i>
+                        <i class="fa-solid fa-basket-shopping"></i>
                     </a>
                     <span class="article-number">0</span>
                 </div>
@@ -78,11 +78,14 @@
                     <i class="fa-solid fa-house"></i>
                 </a>
             </div>
-            <div class="info"><i class="fa-solid fa-info"></i></div>
+            <div class="info">
+                <a href="/html/informations.html">
+                    <i class="fa-solid fa-info"></i>
+                </a>
+            </div>
             <div class="criar-cabaz"><i class="fa-solid fa-basket-shopping"></i></div>
             <div class="login"><i class="fa-solid fa-user"></i></div>
         </section>
-
         <!-- CABAZES -->
 
 
