--- a/html/verduras.html
+++ b/html/verduras.html
@@ -42,7 +42,7 @@
 
                 <div class="cart-div">
                     <a href="/html/carrinho.html">
-                        <i class="fa-solid fa-cart-shopping"></i>
+                        <i class="fa-solid fa-basket-shopping"></i>
                     </a>
                     <span class="article-number">0</span>
                 </div>
