remove photography of each family and cabaz
Also changed style and colors

--- a/html/produtos.html
+++ b/html/produtos.html
@@ -88,82 +88,82 @@
         <section class="all-products" id="productsList">
 
             <div class="title-div">
-                <h1>Cria o teu <span class="hortaDaRia">Cabaz</span></h1>
+                <h1>Cria o teu Cabaz</h1>
             </div>
 
             <div class="ervas-cha photo-div-product" >
                 <a href="/html/ervasECha.html">
-                    <img src="/images/cabaz-photo.jpeg" alt="">
+                    <!-- <img src="/images/cabaz-photo.jpeg" alt=""> -->
                     <p>Ervas e Chá</p>
                 </a>
             </div>
 
             <div class="saladas photo-div-product">
                 <a href="/html/saladas.html">
-                    <img src="/images/cabaz-photo.jpeg" alt="">
+                    <!-- <img src="/images/cabaz-photo.jpeg" alt=""> -->
                     <p>Saladas</p>
                 </a>
             </div>
 
             <div class="verduras-folhas photo-div-product">
                 <a href="/html/verduras.html">
-                    <img src="/images/cabaz-photo.jpeg" alt="">
+                    <!-- <img src="/images/cabaz-photo.jpeg" alt=""> -->
                     <p>Verduras</p>
                 </a>
             </div>
 
             <div class="ovos-sabao photo-div-product">
                 <a href="/html/ovos.html">
-                    <img src="/images/cabaz-photo.jpeg" alt="">
+                    <!-- <img src="/images/cabaz-photo.jpeg" alt=""> -->
                     <p>Ovos</p>
                 </a>
             </div>
 
             <div class="raizes photo-div-product">
                 <a href="/html/raizes.html">
-                    <img src="/images/cabaz-photo.jpeg" alt="">
+                    <!-- <img src="/images/cabaz-photo.jpeg" alt=""> -->
                     <p>Raízes</p>
                 </a>
             </div>
 
             <div class="microverdes-germinados photo-div-product">
                 <a href="/html/microverdes.html">
-                    <img src="/images/cabaz-photo.jpeg" alt="">
+                    <!-- <img src="/images/cabaz-photo.jpeg" alt=""> -->
                 <p>Microverdes</p>
                 </a>
             </div>
 
             <div class="vasos-plantas photo-div-product">
                 <a href="/html/plantasEmVaso.html">
-                    <img src="/images/cabaz-photo.jpeg" alt="">
+                    <!-- <img src="/images/cabaz-photo.jpeg" alt=""> -->
                     <p>Plantas</p>
                 </a>
             </div>
 
             <div class="flores-comestiveis photo-div-product">
                 <a href="/html/floresComestiveis.html">
-                    <img src="/images/cabaz-photo.jpeg" alt="">
+                    <!-- <img src="/images/cabaz-photo.jpeg" alt=""> -->
                     <p>Flores</p>
                 </a>
             </div>
 
             <div class="leguminosas photo-div-product">
                 <a href="/html/leguminosas.html">
-                    <img src="/images/cabaz-photo.jpeg" alt="">
+                    <!-- <img src="/images/cabaz-photo.jpeg" alt=""> -->
                     <p>Leguminosas</p>
                 </a>
             </div>
 
             <div class="horticolas-frio photo-div-product">
                 <a href="/html/horticulas.html">
-                    <img src="/images/cabaz-photo.jpeg" alt="">
+                    <!-- <img src="/images/cabaz-photo.jpeg" alt=""> -->
                     <p>Horticolas</p>
                 </a>
             </div>
 
             <div class="sabao-Natural photo-div-product">
                 <a href="/html/sabaoNatural.html">
-                    <img src="/images/cabaz-photo.jpeg" alt="">
+                    <!-- <img src="/images/cabaz-photo.jpeg" alt=""> -->
                     <p>Sabão Natural</p>
                 </a>
             </div>
