--- a/index.html
+++ b/index.html
@@ -99,28 +99,28 @@
 
                 <div class="cabaz-1 photo-div-cabaz">
                     <a href="/html/cabaz-um.html">
-                        <img src="images/cabaz-photo.jpeg" alt="">
+                        <!-- <img src="/images/logo.png" alt=""> -->
                         <div class="cabazOne"></div>
                     </a>
                 </div>
 
                 <div class="cabaz-2 photo-div-cabaz">
                     <a href="/html/cabaz-dois.html">
-                        <img src="images/fotosCabazes/cabaz-dois/c2.jpg" alt="">
+                        <!-- <img src="images/fotosCabazes/cabaz-dois/c2.jpg" alt=""> -->
                         <div class="cabazTwo"></div>
                     </a>
                 </div>
 
                 <div class="cabaz-3 photo-div-cabaz">
                     <a href="/html/cabaz-tres.html">
-                        <img src="images/fotosCabazes/cabaz-tres/c3.jpg" alt="">
+                        <!-- <img src="images/fotosCabazes/cabaz-tres/c3.jpg" alt=""> -->
                         <div class="cabazThree"></div>
                     </a>
                 </div>
 
                 <div class="cabaz-4 photo-div-cabaz">
                     <a href="/html/produtos.html">
-                        <img src="images/fotosCabazes/criar-cabaz/cb.jpg" alt="">
+                        <!-- <img src="images/fotosCabazes/criar-cabaz/cb.jpg" alt=""> -->
                         <div class="cabazFour"></div>
                     </a>
                 </div>
@@ -130,9 +130,9 @@
         </section>
 
         <!-- TESTIMONIAL -->
-        <h3 class="section-title-testimonial">Testemunhos:</h3>
-        <section class="testimonials"></section>
-
+        <section class="testimonials">
+            <h3 class="section-title-testimonial">Testemunhos:</h3>
+        </section>
 
         <section class="media-and-contacts" id="contactsAndSocialMedia">
 
