--- a/index.html
+++ b/index.html
@@ -88,11 +88,16 @@
         </section>
         <!-- CABAZES -->
 
+        
+            <div class="title-div">
+                <h1 class="welcome">Benvindo à <br><span class="hortaDaRia">Horta d'Ria</span></h1>
+            </div>
+
 
         <section class="cabazes" id="cabazesMenu">
 
-            <div class="title-div">
-                <h1><span class="hortaDaRia">Cabazes</span> da semana</h1>
+            <div class="title-div cabazes-section-title">
+                <h1>Cabazes da semana</h1>
             </div>
 
             <div class="cabaz-menu">
