fix ortographic errors

--- a/html/aboutUs.html
+++ b/html/aboutUs.html
@@ -106,12 +106,12 @@
                         Com essa mudança consegui atingir o objectivo de produzir a minha propria comida, aumentar o contacto com a natureza e por sua vez um estilo de vida mais saudável.
                     </p>
                     <p>
-                        Eu sou o Tiago, tenho 37 anos e tambem sou natural de Vila Nova de Famalicão. Sou formado e pós-graduado em artes e design de joalharia. Exerci essa profissão uns anos, até que comecei
-                        a ganhar mais interesse e gosto pela natureza. Esse gosto fez co que eu fosse capaz de produzir a minha propria comida.
+                        Eu sou o Tiago, tenho 37 anos e também sou natural de Vila Nova de Famalicão. Sou formado e pós-graduado em artes e design de joalharia. Exerci essa profissão uns anos, até que comecei
+                        a ganhar mais interesse e gosto pela natureza. Esse gosto fez com que eu fosse capaz de produzir a minha própria comida.
                         O que começou como um hooby, surge em 2020 como a horta d'Ria, um projecto pequeno em tamanho mas grande em qualidade e vontade em estarmos constantemente a aprender. 
                     </p>
                     <p>
-                        O Francisco juntou-se à equipa cerca de um ano depois. Os nossos ideais são sempre trabalhar com a natureza e não contra. Temos práticas sustentáveis, agroecologicas e regenerativas. Damos 
+                        O Francisco juntou-se à equipa cerca de um ano depois. Os nossos ideais são sempre trabalhar com a natureza e não contra. Temos práticas sustentáveis, agroecológicas e regenerativas. Damos 
                         ênfase aos produtos locais, sazonais e sistemas circulares. Soberania alimentar na nossa comunidade é o que aspiramos.
                     </p>
                     <p>
