changed initial section of home page structure
i've changed too some colors on all pages

--- a/html/form.html
+++ b/html/form.html
@@ -119,7 +119,7 @@
             <textarea id="clientMessage" name="Mensagem" required autocorrect rows="5" placeholder="Escreve aqui a tua mensagem"></textarea>
         </div>
 
-        <span>* Preenchimento obrigatório</span>
+        <span class="obligationOrErrorMessage">* Preenchimento obrigatório</span>
 
         <button type="submit" class="btn-info" id="submitBtn">Enviar</button>
 
