FIX BUGS AND META TAGS

--- a/html/aboutUs.html
+++ b/html/aboutUs.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Simão Alves">
     <meta name="description" content="Sobre nós - Produtos 100% Naturais - Horta d'Ria - V. N. Famalicão">
-    <meta name="keywords" content="Agricultura, horta, produtos 100% Naturais, cabaz 1, cabaz 2, cabaz 3, cria o teu cabaz, cabaz, cabazes, horta d'ria, horta da ria, sobre nós">
+    <meta name="keywords" content="Agricultura, horta, produtos 100% Naturais, cabaz pequeno, cabaz médio, cabaz grande, criar cabaz, cabaz, cabazes, horta d'ria, horta da ria, horta da ria famalicão, sobre nós">
     <link rel="stylesheet" href="\stylesheet/navAndSearch.css">
     <link rel="stylesheet" href="/stylesheet/styleAboutUs.css">
     <link rel="stylesheet" href="/stylesheet/cabaz.css">
@@ -56,7 +56,7 @@
         <ul class="menu-list">
             <!-- href.value = element.id.value -->
         <a href="/html/aboutUs.html"> <li>Quem Somos  </li>  </a>
-        <a href="/index.html"> <li>Cabazes</li></a>
+        <a href="\index.html"> <li>Cabazes</li></a>
         <a href="/html/produtos.html"> <li>Produtos</li></a>
         <a href="/html/form.html"> <li>Contactos</li></a>
         <a href="/html/testemunhos.html"> <li>Testemunhos</li></a>
