--- a/html/sabaoNatural.html
+++ b/html/sabaoNatural.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Simão Alves">
     <meta name="description" content="Sabão Natural | Produtos 100% Naturais - Horta d'Ria - V. N. Famalicão">
-    <meta name="keywords" content="Agricultura, horta, produtos 100% Naturais, cabaz 1, cabaz 2, cabaz 3, cria o teu cabaz, cabaz, cabazes, horta d'ria, horta da ria, sabao natural">
+    <meta name="keywords" content="Agricultura, horta, produtos 100% Naturais, cabaz pequeno, cabaz médio, cabaz grande, criar cabaz, cabaz, cabazes, horta d'ria, horta da ria, horta da ria famalicão, sabao natural, sabao horta da ria">
     <link rel="stylesheet" href="/stylesheet/styleAboutUs.css">
     <link rel="stylesheet" href="/stylesheet/cabaz.css">
     <link rel="stylesheet" href="/stylesheet/bottomMenu.css">
