--- a/html/informations.html
+++ b/html/informations.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Simão Alves">
     <meta name="description" content="Informações | Produtos 100% Naturais - Horta d'Ria - V. N. Famalicão">
-    <meta name="keywords" content="Agricultura, horta, produtos 100% Naturais, cabaz 1, cabaz 2, cabaz 3, cria o teu cabaz, cabaz, cabazes, horta d'ria, horta da ria, informações">
+    <meta name="keywords" content="Agricultura, horta, produtos 100% Naturais, cabaz pequeno, cabaz médio, cabaz grande, cria o teu cabaz, cabaz, cabazes, horta d'ria, horta da ria, horta da ria famalicão, informações">
     <link rel="stylesheet" href="/stylesheet/styleAboutUs.css">
     <link rel="stylesheet" href="/stylesheet/cabaz.css">
     <link rel="stylesheet" href="/stylesheet/bottomMenu.css">
