--- a/html/leguminosas.html
+++ b/html/leguminosas.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Simão Alves">
-    <meta name="keywords" content="Agricultura, horta, produtos 100% Naturais, cabaz 1, cabaz 2, cabaz 3, cria o teu cabaz, cabaz, cabazes, horta d'ria, horta da ria, leguminosas">
+    <meta name="keywords" content="Agricultura, horta, produtos 100% Naturais, cabaz pequeno, cabaz médio, cabaz grande, criar cabaz, cabaz, cabazes, horta d'ria, horta da ria, horta da ria famalicão, leguminosas">
     <meta name="description" content="Leguminosas | Produtos 100% Naturais - Horta d'Ria - V. N. Famalicão">
     <link rel="stylesheet" href="/stylesheet/styleAboutUs.css">
     <link rel="stylesheet" href="/stylesheet/cabaz.css">
