--- a/html/testemunhos.html
+++ b/html/testemunhos.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Simão Alves">
     <meta name="description" content="Testemunhos - Horta da Ria - Produtos 100% Naturais - V. N. Famalicão">
-    <meta name="keywords" content="Agricultura, horta, produtos 100% Naturais, cabaz 1, cabaz 2, cabaz 3, cria o teu cabaz, cabaz, cabazes, horta d'ria, horta da ria, testemunhos">
+    <meta name="keywords" content="Agricultura, horta, produtos 100% Naturais, cabaz pequeno, cabaz médio, cabaz grande, cria o teu cabaz, cabaz, cabazes, horta d'ria, horta da ria, horta da ria famalicão, testemunhos horta da ria">
     <link rel="stylesheet" href="\stylesheet/navAndSearch.css">
     <link rel="stylesheet" href="/stylesheet/styleAboutUs.css">
     <link rel="stylesheet" href="/stylesheet/cabaz.css">
