--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="author" content="Simão Alves">
 
     <meta name="description" content="Horta d'Ria - Produtos 100% Naturais - Escolhe o teu Cabaz - V. N. Famalicão">
-    <meta name="keywords" content="Agricultura, horta, produtos 100% Naturais, cabaz 1, cabaz 2, cabaz 3, cria o teu cabaz, cabaz, cabazes, horta d'ria, horta da ria">
+    <meta name="keywords" content="Agricultura, horta, produtos 100% Naturais, cabaz pequeno, cabaz médio, cabaz grande, cria o teu cabaz, cabaz, cabazes, horta d'ria, horta da ria">
     <link rel="stylesheet" href="stylesheet/navAndSearch.css">
     <link rel="stylesheet" href="stylesheet/styleAboutUs.css">
     <link rel="stylesheet" href="stylesheet/cabaz.css">
@@ -174,6 +174,7 @@
             <h3 class="section-title-testimonial">Testemunhos</h3>
         </section>
 
+        
         <section class="media-and-contacts" id="contactsAndSocialMedia">
 
             <div class="footer-head">
