meta tags fixed

--- a/html/cabaz-tres.html
+++ b/html/cabaz-tres.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Simão Alves">
-    <meta name="description" content="Cabaz nº 3 - Horta d'Ria - Produtos 100% Naturais - V. N. Famalicão">
+    <meta name="description" content="Cabaz Grande - Horta d'Ria - Produtos 100% Naturais - Vila Nova de Famalicão">
     <meta name="keywords" content="Agricultura, horta, produtos 100% Naturais, cabaz pequeno, cabaz médio, cabaz grande, criar cabaz, cabaz, cabazes, horta d'ria, horta da ria famalicão, horta da ria">
     <link rel="stylesheet" href="/stylesheet/styleAboutUs.css">
     <link rel="stylesheet" href="/stylesheet/cabaz.css">
@@ -20,7 +20,7 @@
     <script src="/script.js" defer></script>
 
 
-    <title>Cabaz nº 3 - Horta d'Ria - Produtos 100% Naturais - Vila Nova de Famalicão</title>
+    <title>Cabaz Grande - Horta d'Ria - Produtos 100% Naturais - Vila Nova de Famalicão</title>
     <link rel="icon" type="image/png" href="/images/HR_logo.png">
 
 
