--- a/html/carrinho.html
+++ b/html/carrinho.html
@@ -18,6 +18,7 @@
 
     <!-- font awesome  -->
     <script src="https://kit.fontawesome.com/ff1abd11bd.js" crossorigin="anonymous"></script> 
+    <script src="\scriptDocs/floresComestiveis.js" defer></script>
     <script src="\script.js" defer></script>
     
 
