Starting build cart interaction
i've added javascript code to add items to cart and remove it too. also need to check and update the js code to some of the familys.
I've publish this like that to see the "alert" when the user ads an item to the cart

--- a/html/ervasECha.html
+++ b/html/ervasECha.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="/stylesheet/ervasECha.css">
     <link rel="stylesheet" href="/stylesheet/navAndSearch.css">
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/> -->
-    <script src="/scriptDocs/ervasECha.js" defer></script>
+    <script type="module" src="/scriptDocs/ervasECha.js" defer></script>
     <script src="https://kit.fontawesome.com/ff1abd11bd.js" crossorigin="anonymous"></script> 
     <script src="/script.js" defer></script>
 
@@ -43,7 +43,7 @@
                     <a href="/html/carrinho.html">
                         <i class="fa-solid fa-basket-shopping"></i>
                     </a>
-                    <span class="article-number">0</span>
+                    <span class="article-number"></span>
                 </div>
 
                 <i class="fa-solid fa-bars-staggered openMenu"></i>
