--- a/html/form.html
+++ b/html/form.html
@@ -14,12 +14,12 @@
     <link rel="stylesheet" href="/stylesheet/contacts.css">
     <link rel="stylesheet" href="/stylesheet/footer.css">
     <link rel="stylesheet" href="/stylesheet/form.css">
-    <script src="\scriptDocs/form.js" defer></script>
+    <script type="module" src="\scriptDocs/form.js" defer></script>
 
 
     <!-- font awesome  -->
     <script src="https://kit.fontawesome.com/ff1abd11bd.js" crossorigin="anonymous"></script> 
-    <script src="\script.js" defer></script>
+    <script type="module" src="\script.js" defer></script>
     
 
     <title>Contactos - Horta d'Ria - Produtos 100% Naturais - Agricultura Local e Ecológica - V. N. Famalicão</title>
@@ -43,7 +43,7 @@
                     <a href="/html/carrinho.html">
                         <i class="fa-solid fa-basket-shopping"></i>
                     </a>
-                    <span class="article-number">0</span>
+                    <span class="article-number"></span>
                 </div>
 
                 <i class="fa-solid fa-bars-staggered openMenu"></i>
