--- a/html/produtos.html
+++ b/html/produtos.html
@@ -19,7 +19,7 @@
 
     <!-- font awesome  -->
     <script src="https://kit.fontawesome.com/ff1abd11bd.js" crossorigin="anonymous"></script> 
-    <script src="/script.js" defer></script>
+    <script type="module" src="/script.js" defer></script>
     
 
     <title>Produtos 100% Naturais - Agricultura Local e Ecológica - V. N. Famalicão</title>
@@ -46,7 +46,7 @@
                     <a href="/html/carrinho.html">
                         <i class="fa-solid fa-basket-shopping"></i>
                     </a>
-                    <span class="article-number">0</span>
+                    <span class="article-number"></span>
                 </div>
 
                 <i class="fa-solid fa-bars-staggered openMenu"></i>
