--- a/html/success.html
+++ b/html/success.html
@@ -20,8 +20,7 @@
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <script src="/script.js" defer></script>
-    <script src="/scriptDocs/form.js" defer></script>
+    <script type="module" src="/script.js" defer></script>
 
 
 
@@ -48,7 +47,7 @@
                     <a href="/html/carrinho.html">
                         <i class="fa-solid fa-basket-shopping"></i>
                     </a>
-                    <span class="article-number">0</span>
+                    <span class="article-number"></span>
                 </div>
 
                 <i class="fa-solid fa-bars-staggered openMenu"></i>
