--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
 
 
     <script src="https://kit.fontawesome.com/ff1abd11bd.js" crossorigin="anonymous"></script> 
-    <script src="script.js" defer></script>
+    <script type="module" src="script.js" defer></script>
     <script src="/scriptDocs/testimonials.js" defer></script>
 
-    
+
+
 
     <title>Horta d'Ria - Home Page - Produtos 100% Naturais - Agricultura Local e Ecológica - V. N. Famalicão</title>
     <link rel="icon" type="image/png" href="/images/HR_logo.png">
@@ -46,7 +47,7 @@
                     <a href="/html/carrinho.html">
                         <i class="fa-solid fa-basket-shopping"></i>
                     </a>
-                    <span class="article-number">0</span>
+                    <span class="article-number"></span>
                 </div>
 
                 <i class="fa-solid fa-bars-staggered openMenu"></i>
@@ -66,11 +67,14 @@
         </ul>
 
     </header>
-        <!-- search bar -->
+        
+    <!-- search bar -->
         <!-- <div class="searchBar-div">
             <input type="search" class="searchBarInput">
                 <i class="fa-solid fa-magnifying-glass"></i>
         </div>  -->
+
+
         <!-- BOTTOM MENU BAR -->
         <section class="bottom-menu">
             <div class="home">
@@ -83,7 +87,9 @@
                     <i class="fa-solid fa-info"></i>
                 </a>
             </div>
-            <div class="criar-cabaz"><i class="fa-solid fa-basket-shopping"></i></div>
+            <div class="criar-cabaz">
+                <i class="fa-solid fa-basket-shopping"></i>
+            </div>
             <div class="login"><i class="fa-solid fa-user"></i></div>
         </section>
         <!-- CABAZES -->
