--- a/html/informations.html
+++ b/html/informations.html
@@ -18,7 +18,7 @@
 
 
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/> -->
-    <script src="/scriptDocs/horticulas.js" defer></script>
+    <script type="module" src="/scriptDocs/informations.js" defer></script>
     <script src="https://kit.fontawesome.com/ff1abd11bd.js" crossorigin="anonymous"></script> 
     <script src="/script.js" defer></script>
 
@@ -46,7 +46,7 @@
                     <a href="/html/carrinho.html">
                         <i class="fa-solid fa-basket-shopping"></i>
                     </a>
-                    <span class="article-number">0</span>
+                    <span class="article-number"></span>
                 </div>
 
                 <i class="fa-solid fa-bars-staggered openMenu"></i>
