--- a/html/testemunhos.html
+++ b/html/testemunhos.html
@@ -23,7 +23,7 @@
     <!-- font awesome  -->
     <script src="https://kit.fontawesome.com/ff1abd11bd.js" crossorigin="anonymous"></script> 
     <script src="\script.js" defer></script>
-    <script src="/scriptDocs/testimonials.js" defer></script>
+    <script type="module" src="/scriptDocs/testimonials.js" defer></script>
 
     
 
@@ -50,7 +50,7 @@
                     <a href="/html/carrinho.html">
                         <i class="fa-solid fa-basket-shopping"></i>
                     </a>
-                    <span class="article-number">0</span>
+                    <span class="article-number"></span>
                 </div>
 
                 <i class="fa-solid fa-bars-staggered openMenu"></i>
