--- a/html/floresComestiveis.html
+++ b/html/floresComestiveis.html
@@ -83,7 +83,7 @@
 
     <!-- watch js document -->
     <section class="floresComestiveis">
-        <h4 class="section-title">Flores Comestíveis</h4>
+        <h4 class="section-title shopping-cart">Flores Comestíveis</h4>
     </section>
 
     <section class="media-and-contacts" id="contactsAndSocialMedia">
