Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
 
     <script src="https://kit.fontawesome.com/ff1abd11bd.js" crossorigin="anonymous"></script> 
-    <script type="text/javascript" src="script.js" defer></script>
-  <!--  <script src="/scriptDocs/testimonials.js" defer></script> -->
+    <script src="/script.js" defer></script>
+    <script src="/scriptDocs/testimonials.js" defer></script>
 
 
 
