--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 
     <script src="https://kit.fontawesome.com/ff1abd11bd.js" crossorigin="anonymous"></script> 
-    <script src="/script.js" defer></script>
+    <script type="module" src="/script.js" defer></script>
     <script src="/scriptDocs/testimonials.js" defer></script>
 
 
