--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <script src="https://kit.fontawesome.com/ff1abd11bd.js" crossorigin="anonymous"></script> 
     <script type="module" src="/script.js" defer></script>
-    <script src="/scriptDocs/testimonials.js" defer></script>
+    <script type="module" src="/scriptDocs/testimonials.js" defer></script>
 
 
 
