fix type="module" to all .html docs

--- a/html/carrinho.html
+++ b/html/carrinho.html
@@ -19,7 +19,8 @@
     <!-- font awesome  -->
     <script src="https://kit.fontawesome.com/ff1abd11bd.js" crossorigin="anonymous"></script> 
     <!-- <script  src="\scriptDocs/ervasECha.js" defer></script> -->
-    <script src="\script.js" defer></script>
+    <script type="module" src="/script.js" defer></script>
+
     <script type="module" src="\scriptDocs/carrinho.js" defer></script>
 
     <title>Carrinho - Horta d'Ria - Produtos 100% Naturais - Agricultura Local e Ecológica - V. N. Famalicão</title>
