--- a/html/sabaoNatural.html
+++ b/html/sabaoNatural.html
@@ -17,7 +17,8 @@
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/> -->
     <script type="module" src="/scriptDocs/sabaoNatural.js" defer></script>
     <script src="https://kit.fontawesome.com/ff1abd11bd.js" crossorigin="anonymous"></script> 
-    <script src="/script.js" defer></script>
+    <script type="module" src="/script.js" defer></script>
+
 
 
     <title>Sabão Natural - Horta d'Ria - Produtos 100% Naturais - Vila Nova de Famalicão</title>
