test nagain type="module" that have been removed

--- a/html/plantasEmVaso.html
+++ b/html/plantasEmVaso.html
@@ -15,9 +15,9 @@
     <link rel="stylesheet" href="/stylesheet/ervasECha.css">
     <link rel="stylesheet" href="/stylesheet/navAndSearch.css">
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/> -->
-    <script type="module" src="/scriptDocs/plantasEmVaso.js" defer></script>
+    <script type="text/javascript" src="/scriptDocs/plantasEmVaso.js" defer></script>
     <script src="https://kit.fontawesome.com/ff1abd11bd.js" crossorigin="anonymous"></script> 
-    <script type="text/html" src="/script.js" defer></script>
+    <script type="text/javascript" src="/script.js" defer></script>
 
 
     <title>Plantas em Vaso - Horta d'Ria - Produtos 100% Naturais - Vila Nova de Famalicão</title>
