--- a/html/produtos.html
+++ b/html/produtos.html
@@ -19,7 +19,7 @@
 
     <!-- font awesome  -->
     <script src="https://kit.fontawesome.com/ff1abd11bd.js" crossorigin="anonymous"></script> 
-    <script type="module" src="/script.js" defer></script>
+    <script type="text/javascript" src="/script.js" defer></script>
     
 
     <title>Produtos 100% Naturais - Agricultura Local e Ecológica - V. N. Famalicão</title>
