--- a/html/carrinho.html
+++ b/html/carrinho.html
@@ -19,9 +19,9 @@
     <!-- font awesome  -->
     <script src="https://kit.fontawesome.com/ff1abd11bd.js" crossorigin="anonymous"></script> 
     <!-- <script  src="\scriptDocs/ervasECha.js" defer></script> -->
-    <script type="module" src="/script.js" defer></script>
+    <script type="text/javascript" src="/script.js" defer></script>
 
-    <script type="module" src="\scriptDocs/carrinho.js" defer></script>
+    <script type="text/javascript" src="\scriptDocs/carrinho.js" defer></script>
 
     <title>Carrinho - Horta d'Ria - Produtos 100% Naturais - Agricultura Local e Ecológica - V. N. Famalicão</title>
     <link rel="icon" type="image/png" href="/images/HR_logo.png">
