--- a/html/success.html
+++ b/html/success.html
@@ -20,7 +20,7 @@
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <script type="module" src="/script.js" defer></script>
+    <script type="text/javascript" src="/script.js" defer></script>
 
 
 
