--- a/html/testemunhos.html
+++ b/html/testemunhos.html
@@ -22,8 +22,8 @@
 
     <!-- font awesome  -->
     <script src="https://kit.fontawesome.com/ff1abd11bd.js" crossorigin="anonymous"></script> 
-    <script src="\script.js" defer></script>
-    <script type="module" src="/scriptDocs/testimonials.js" defer></script>
+    <script type="text/javascript" src="\script.js" defer></script>
+    <script type="text/javascript"src="/scriptDocs/testimonials.js" defer></script>
 
     
 
