cart message and informations page
added message to cart if the user does not have any product inside cart.
Also create some text to explain how it works all website.

--- a/html/informations.html
+++ b/html/informations.html
@@ -85,20 +85,66 @@
         <div class="login"><i class="fa-solid fa-user"></i></div>
     </section>
 <!-- ================================================================ -->
-    <section class="testImage">
-        <img src="/images/img-Test.jpg" alt="">
-        <img src="/images/img-Test.jpg" alt="">
-        <img src="/images/img-Test.jpg" alt="">
-        <img src="/images/img-Test.jpg" alt="">
-        <img src="/images/img-Test.jpg" alt="">
-        <img src="/images/img-Test.jpg" alt="">
+    <section class="informations-sec">
+       
+        <div class="come-see-us">
+            <h3>Vem Visitar-nos</h3>
+            <p> Sabias que estámos todos os sábados na Praça Mercado de 
+                V. N. Famalicão?
+                <br>
+                É verdade, podes visitar-nos entre as 7:00 e as 13:00.
+                Teremos todo o gosto em receber-te, apresentar-te os nossos produtos da 
+                semana e falar-te um pouco sobre a nossa horta.
+                <br>
+                Poderás ver com os teus prórprios olhos a qualidade dos nossos produtos 
+                100% naturais.
+                <br>
+                O convite está feito. Esperámos por ti!
+                <br>
+                Caso não saibas onde fica a Praça Mercado de V. N. Famalicão, deixamos-te 
+                <span class="praca-location"><a target="_blank" href="https://www.google.com/maps/place//data=!4m2!3m1!1s0xd245901ebe38a93:0x4df4377373a2034b?sa=X&ved=1t:8290&ictx=111">aqui</a></span> 
+                a localização.
+            </p>
+        </div>
 
-        <img src="/images/img-Test.jpg" alt="">
-        <img src="/images/img-Test.jpg" alt="">
-        <img src="/images/img-Test.jpg" alt="">
-
+        <div class="website-explanation">
+            <h3>Como faço a minha encomenda?</h3>
+            <p>Na nossa Horta todas as semanas temos novos produtos.</p>
+            <p>Irás perceber que todas as semanas temos 3 novos cabazes para te deliciares e 
+                experimentares novas receitas.
+            </p>
+            <p>O procedimento é simples. Podes optar pelos cabazes que preparámos para ti, ou então, 
+                se preferires, podes 
+                <span class="create-cabaz">
+                    <a href="/html/produtos.html">
+                    criar o teu próprio Cabaz.
+                    </a>
+                </span>
+                Aqui podes selecionar vários produtos à tua escolha e ainda tens a possibilidade de consultar
+                qual o preço por artigo, quantidade e final.
+            </p>
+            <p>Uma vez escolhidos os produtos, as respetivas quantidades e devidamente adicionados ao cesto,
+                chega o momento de responderes a umas breves questões sobre a tua encomenda.
+            </p>
+            <p>Se queres entrega ao domicílio, se preferes levantar na nossa Horta ou mesmo na Praça Mercado de V. N. Famalicão
+                ao Sábado.
+            </p>
+            <p>
+                Todas as respostas servirão apenas para que te possamos prestar o melhor serviço possível.
+                ATENÇÃO, nenhuma resposta será gravada ou registada em nenhum documento ou base dados. Assim como também 
+                não iremos registar os teus contactos ou morada sem a tua permissão. 
+            </p>
+            <p>
+                Prezámos pela tua privacidade.
+            </p>
+            <p>Caso ainda continues com alguma dúvida, por favor, não hesites em contactar-nos.
+                Estaremos sempre disponíveis para te ajudar, mediante o melhor possível.
+            </p>
+            
+        </div>
 
     </section>
+
 <!-- ======================================================================= -->
 
     <section class="media-and-contacts" id="contactsAndSocialMedia">
