testing the javascript code of ervasECha
delete cart;
message of item added and removed to cart;
disabled addToCart Btn if quantity = "Qt"

--- a/html/carrinho.html
+++ b/html/carrinho.html
@@ -68,30 +68,11 @@
 
     </header>
 
+     <!-- ITEM ADDED TO CART -->
+     <div class="alert"></div>
+
     <section class="cartList">
 
-        <!-- <div class="box-cart">
-
-            <div class="box-1">
-                <img src="/images/cabaz-photo.jpeg" alt="">
-            </div>
-            
-            <div class="box-2">
-                <h3 class="title">NAME</h3>
-                <div class="box-2-child">
-                    <button class="lessOneItemBtn">-</button>
-                    <input type="number" value="1">
-                    <button class="oneMoreItemBtn">+</button>
-                </div>
-                <div>
-                    <span class="itemPrice">2€</span>
-                    <button><i class="fa-regular fa-trash-can"></i></button>
-                </div>
-            </div>
-
-        </div>
-        
-     -->
         <div class="buttonsDelAndAdvance">
             <button class="delete-cart">Esvaziar Cesto</button>
             <button class="advance-cart">Avançar</button>
