--- a/html/ervasECha.html
+++ b/html/ervasECha.html
@@ -81,9 +81,14 @@
         <div class="login"><i class="fa-solid fa-user"></i></div>
     </section>
 
+    <!-- ITEM ADDED TO CART -->
+    <div class="alert"></div>
+
     <!-- watch js document -->
     <section class="ervas">
+        
         <h4 class="section-title">Ervas e Chá</h4>
+        
     </section>
 
     <section class="media-and-contacts" id="contactsAndSocialMedia">
