--- a/html/microverdes.html
+++ b/html/microverdes.html
@@ -82,6 +82,9 @@
         <div class="login"><i class="fa-solid fa-user"></i></div>
     </section>
 
+    <!-- ITEM ADDED TO CART -->
+    <div class="alert"></div>
+
     <!-- watch js document -->
     <section class="microverdes">
         <h4 class="section-title">Microverdes</h4>
