--- a/html/floresComestiveis.html
+++ b/html/floresComestiveis.html
@@ -82,10 +82,15 @@
         <div class="login"><i class="fa-solid fa-user"></i></div>
     </section>
 
+    <!-- ITEM ADDED TO CART -->
+    <div class="alert"></div>
+
     <!-- watch js document -->
     <section class="floresComestiveis">
         <h4 class="section-title shopping-cart">Flores Comestíveis</h4>
     </section>
+    
+    
 
     <section class="media-and-contacts" id="contactsAndSocialMedia">
 
