--- a/html/plantasEmVaso.html
+++ b/html/plantasEmVaso.html
@@ -80,6 +80,9 @@
         <div class="login"><i class="fa-solid fa-user"></i></div>
     </section>
 
+    <!-- ITEM ADDED TO CART -->
+    <div class="alert"></div>
+
     <!-- watch js document -->
     <section class="plantasEmVaso toto">
         <h4 class="section-title">plantas em vaso</h4>
