--- a/html/saladas.html
+++ b/html/saladas.html
@@ -81,6 +81,9 @@
         <div class="login"><i class="fa-solid fa-user"></i></div>
     </section>
 
+    <!-- ITEM ADDED TO CART -->
+    <div class="alert"></div>
+
     <!-- watch js document -->
     <section class="saladas">
         <h4 class="section-title">saladas</h4>
