--- a/html/verduras.html
+++ b/html/verduras.html
@@ -83,6 +83,9 @@
         <div class="login"><i class="fa-solid fa-user"></i></div>
     </section>
 
+    <!-- ITEM ADDED TO CART -->
+    <div class="alert"></div>
+
     <!-- watch js document -->
     <section class="verduras">
         <h4 class="section-title">verduras</h4>
