update the calculation on cart page
 with this update it is possible add and remove the items from and to cart.
the subtotal is working well.
all with the same time to localStorage

--- a/html/carrinho.html
+++ b/html/carrinho.html
@@ -86,6 +86,10 @@
         
     </section>
 
+    <div class="sub-total">
+        Subtotal <span class="final-price"></span>
+    </div>
+
     <section class="totalCartPrice"></section>
         <!-- search bar -->
         <!-- <div class="searchBar-div">
